log/build_2024-05-30_10-01-19/amr_v4_station/stderr.log
  File "/home/colin/amr_v4_station/install/amr_v4_station/lib/python3.10/site-packages/amr_v4_station/station.py", line 29
    'DRIVER={'{}'};SERVER={};DATABASE={};UID={};PWD={}'.format(
    ^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?

